--- a/options.conf
+++ b/options.conf
@@ -1,9 +1,10 @@
 [package]
 name = R-mda
-url = https://cran.r-project.org/src/contrib/mda_0.4-10.tar.gz
+url = https://cran.r-project.org/src/contrib/mda_0.5.tar.gz
 archives = 
 giturl = 
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
@@ -38,6 +39,8 @@ no_autostart = false
 nodebug = false
 # disable stripping binaries
 nostrip = false
+# configure build also for openmpi
+openmpi = false
 # optimize build for size over speed
 optimize_size = false
 # set profile for pgo
